syntax = "proto3";

package proto;

option go_package = "./proto";

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
}

enum MessageType {
  TEXT = 0;
  PHOTO = 1;
  DOCUMENT = 2;
  AUDIO = 3;
}

message SendNotificationRequest {
  string telegram_user_id = 1;
  string content = 2;
  MessageType message_type = 3;
  bytes file_data = 4;
  string filename = 5;
}

message SendNotificationResponse {
  bool success = 1;
}